# family-tree-warehouse

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.docker/airflow/: Dockerfile  entrypoint.sh  requirements.txt
assets/: airflow-dag.mmd
configs/: settings.example.env
dags/: extraction_utils.py  family_tree_dw_dag.py
dags/py/: extraction_utils.py
dags/sql/: init_raw_tables.sql  init_schema.sql  merge_dim_family_scd2.sql  merge_dim_person.sql  merge_dim_person_scd2.sql  merge_fact_relation.sql  seed_dim_date.sql  seed_dim_relationship_role.sql  seed_reference_dimensions.sql
demo/: family_tree_schema.cyp  scenario_02_life_event_updates.cyp  scenario_03_fact_relationship_fix.cyp
demo/scenarios/: 01_new_births_and_marriage.cyp
docker/airflow/: Dockerfile  init_and_start.sh
reports/: 01_person_relationship_card.sql  02_marriage_timeline.sql  03_ancestor_lineage_trace.sql
scripts/: run_demo_e2e.sh
sql/: merge_dim_family_scd2.sql  merge_dim_person_scd2.sql  merge_fact_relation.sql
src/family_tree_dw/: __init__.py  cli.py  config.py  db.py  etl.py  extract.py
