[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "family-tree-warehouse"
version = "0.1.0"
description = "Incremental Neo4j to DuckDB ETL for family tree star schema"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=1.1.0",
  "neo4j>=5.24.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
family-tree-dw = "family_tree_dw.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
